--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -11,12 +11,12 @@
 {#ここから表示したい情報を記載します。#}
 {% block page_content %}
     <div class="page-header text-center">
-        <h1>サービス名</h1>
+        <h1>スッキリスイカ</h1>
     </div>
     <div class="container">
         <div class="box">
             <div class="row">
-                ここにコンテンツが入る
+                ギットできた？
             </div>
         </div>
     </div>
