--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -5,18 +5,27 @@
 {% block title %}TOP{% endblock %}
 
 {# 適用させたいスタイルシートのパスを指定します #}
-{% block header_scripts_add %}
-{% endblock %}
+{% block header_scripts_add %}{% endblock %}
 
 {#ここから表示したい情報を記載します。#}
 {% block page_content %}
     <div class="page-header text-center">
-        <h1>サービス名</h1>
+        <h1>スッキリSuica</h1>
+        <p>～残高0の幸せ～</p>
     </div>
     <div class="container">
         <div class="box">
             <div class="row">
-                ここにコンテンツが入る
+                <div class="col-md-4 col-md-offset-4">
+                    <form id="sukkiri" method="GET" action="/index/">
+                        <div class="form-inline" style="padding-bottom:30px">
+                            <label for="value">スッキリさせる金額</label>
+                            <input type="text" class="form-control" id="value" placeholder="">
+                            <label>円</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
