indexのOnsen対応とloginの文面変更

--- a/app/View/login/login.twig
+++ b/app/View/login/login.twig
@@ -39,13 +39,11 @@
                 <div class="col-md-6">
                     <p class="lead">会員登録は <span class="text-success">無料</span> 今すぐ登録！</p>
                     <ul class="list-unstyled">
-                        <li><span class="fa fa-check text-success"></span> すべての注文が見れます。</li>
-                        <li><span class="fa fa-check text-success"></span> 早い追加注文。</li>
-                        <li><span class="fa fa-check text-success"></span> お気に入りを保存できます。</li>
-                        <li><span class="fa fa-check text-success"></span> 素早い購入。</li>
-                        <li><span class="fa fa-check text-success"></span> クーポンプレゼント
-                            <small>(カスタマー限定)</small>
-                        </li>
+                        <li><span class="fa fa-check text-success"></span> スッキリストを投稿できます！</li>
+                        <li><span class="fa fa-check text-success"></span> スッキリストを共有できます！</li>
+                        <li><span class="fa fa-check text-success"></span> スッキリストを保存できます！</li>
+                        <li><span class="fa fa-check text-success"></span> スッキリポイントを貯めて特典を手に入れましょう！</li>
+                        <li><span class="fa fa-check text-success"></span> その他いろいろ</li>
                     </ul>
                     <p><a href="/register/" class="btn btn-info btn-block">今すぐ登録</a></p>
                 </div>
