ops-pageミスったの直しただけ

--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <ons-page>
+        </ons-page>
         {% endblock %}
 
         {#共通フッタとして追記したい情報を記載します。#}
