--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -21,7 +21,8 @@
                         <form id="sukkiri" method="GET" action="/index/">
                             <div class="form-inline" style="padding-bottom:30px">
                                 <label for="value">スッキリさせる金額</label>
-                                <input type="text" class="form-control" id="value" placeholder="">
+                                <!-- <input type="text" class="form-control" id="value" placeholder=""> -->
+                                <ons-input id="value" type="number" placeholder="金額" modifier="underbar" float></ons-input>
                                 <label>円</label>
                             </div>
                             <button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>
