--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -9,6 +9,15 @@
 
 {#ここから表示したい情報を記載します。#}
 {% block page_content %}
+    <style>
+        .page__background {
+            background-image: url("kozeni.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
     <ons-page>
         <div class="page-header text-center">
             <h1>スッキリSuica</h1>
@@ -17,22 +26,24 @@
         <div class="container">
             <div class="box">
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4">
+                    <!--<div class="col-md-4 col-md-offset-4">-->
+                    <div style="text-align: center; margin: 30px 15px;">
                         <form id="sukkiri" method="GET" action="/index/">
                             <div class="form-inline" style="padding-bottom:30px">
-                                <label for="value">スッキリさせる金額</label>
+                                <!--<label for="value">スッキリさせる金額</label>-->
                                 <!-- <input type="text" class="form-control" id="value" placeholder=""> -->
-                                <ons-input id="value" type="number" placeholder="金額" modifier="underbar" float></ons-input>
-                                <label>円</label>
+                                <ons-input id="value" type="number" placeholder="" modifier="underbar" float="float"></ons-input>
+                                <label>円を</label>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>
+                            <!--<button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>-->
+                            <ons-button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
-        </ons-page>
-        {% endblock %}
+    </ons-page>
+{% endblock %}
 
-        {#共通フッタとして追記したい情報を記載します。#}
-        {% block footer_scripts_add %}{% endblock %}
+{#共通フッタとして追記したい情報を記載します。#}
+{% block footer_scripts_add %}{% endblock %}
