--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -28,7 +28,7 @@
                 <div class="row">
                     <!--<div class="col-md-4 col-md-offset-4">-->
                     <div style="text-align: center; margin: 30px 15px;">
-                        <form id="sukkiri" method="GET" action="/index/">
+                        <form id="sukkiri" method="GET" action="/results/">
                             <div class="form-inline" style="padding-bottom:30px">
                                 <!--<label for="value">スッキリさせる金額</label>-->
                                 <!-- <input type="text" class="form-control" id="value" placeholder=""> -->
