feat:背景画像入れた。フッター削除した。

--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -11,11 +11,12 @@
 {% block page_content %}
     <style>
         .page__background {
-            background-image: url("kozeni.jpg");
+            background-image: url("https://www.pakutaso.com/shared/img/thumb/PAK83_500encointachi20140305_TP_V4.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
             padding: 0;
+            opacity: 0.6;
         }
     </style>
     <ons-page>
