--- a/app/View/layout/layout.twig
+++ b/app/View/layout/layout.twig
@@ -42,6 +42,6 @@
 {# 追加でスクリプトがほしいときにぶっこまれます #}
 {% block footer_scripts_add %}{% endblock %}
 {# フッタを表示します #}
-{% include 'layout/footer.twig' %}
+{# {% include 'layout/footer.twig' %} #}
 </body>
 </html>
