--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -13,25 +13,24 @@
 
 <ons-page>
   <ons-tabbar swipeable position="top">
-    <ons-tab page="tab1.html" label="Tab 1" icon="ion-home, material:md-home" badge="7" active>
+    <ons-tab page="tab1.html" label="リスト１" active>
     </ons-tab>
-    <ons-tab page="tab2.html" label="Tab 2" icon="md-settings" active-icon="md-face">
+    <ons-tab page="tab2.html" label="リスト２">
     </ons-tab>
-    <ons-tab page="tab3.html" label="Tab 3" icon="md-settings" active-icon="md-face">
+    <ons-tab page="tab3.html" label="リスト３">
     </ons-tab>
   </ons-tabbar>
 </ons-page>
 
+{#リスト１#}
 <template id="tab1.html">
-
-
   <ons-page id="Tab1">
 
     <ons-card>
 
     <ons-list-item>
       <div class="left">
-        <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 80%">
+        <img src="http://image.rakuten.co.jp/repmarket/cabinet/kame/16-01/kam662230.jpg" alt="Onsen UI" style="width: 80%">
       </div>
       <div class="center">
         <span class="list-item__title"><font size="5">かっぱえびせん</font></span>
@@ -39,9 +38,7 @@
       </div>
     </ons-list-item>
 
-
         <br><br>
-
 
         <ons-list-item>
           <div class="left">
@@ -53,9 +50,7 @@
           </div>
         </ons-list-item>
 
-
         <br><br>
-
 
         <ons-list-item>
           <div class="left">
@@ -65,14 +60,26 @@
             <span class="list-item__title"><font size="5">かっぱえびせん</font></span>
             <span class="list-item__subtitle"><font size="5">180</font></span>
           </div>
-        </ons-list-item>s
+        </ons-list-item>
+
+        <br><br>
+
+        {#合計金額表示#}
+        <ons-list-item>
+          <div class="left">
+            <span class="list-item__title"><font size="6">合計金額</font></span>
+          </div>
+          <div class="center">
+            <span class="list-item__subtitle"><font size="6">1000</font></span>
+          </div>
+        </ons-list-item>
 
    </ons-card>
-
 
   </ons-page>
 </template>
 
+{#リスト２#}
 <template id="tab2.html">
   <ons-page id="Tab2">
 
@@ -88,9 +95,7 @@
     </div>
   </ons-list-item>
 
-
       <br><br>
-
 
       <ons-list-item>
         <div class="left">
@@ -102,9 +107,7 @@
         </div>
       </ons-list-item>
 
-
       <br><br>
-
 
       <ons-list-item>
         <div class="left">
@@ -114,13 +117,26 @@
           <span class="list-item__title"><font size="5">かっぱえびせん</font></span>
           <span class="list-item__subtitle"><font size="5">180</font></span>
         </div>
-      </ons-list-item>s
+      </ons-list-item>
+
+      <br><br>
+
+      {#合計金額表示#}
+      <ons-list-item>
+        <div class="left">
+          <span class="list-item__title"><font size="6">合計金額</font></span>
+        </div>
+        <div class="center">
+          <span class="list-item__subtitle"><font size="6">1000</font></span>
+        </div>
+      </ons-list-item>
 
  </ons-card>
 
   </ons-page>
 </template>
 
+{#リスト３#}
 <template id="tab3.html">
   <ons-page id="Tab3">
   <ons-card>
@@ -135,9 +151,7 @@
     </div>
   </ons-list-item>
 
-
       <br><br>
-
 
       <ons-list-item>
         <div class="left">
@@ -149,9 +163,7 @@
         </div>
       </ons-list-item>
 
-
       <br><br>
-
 
       <ons-list-item>
         <div class="left">
@@ -161,14 +173,23 @@
           <span class="list-item__title"><font size="5">かっぱえびせん</font></span>
           <span class="list-item__subtitle"><font size="5">180</font></span>
         </div>
-      </ons-list-item>s
+      </ons-list-item>
+
+      <br><br>
+
+      {#合計金額表示#}
+      <ons-list-item>
+        <div class="left">
+          <span class="list-item__title"><font size="6">合計金額</font></span>
+        </div>
+        <div class="center">
+          <span class="list-item__subtitle"><font size="6">1000</font></span>
+        </div>
+      </ons-list-item>
 
  </ons-card>
   </ons-page>
 </template>
-
-
-
 
 {% endblock %}
 
