feat:indexデザインサブメニュー追加。

--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -19,32 +19,31 @@
             opacity: 0.6;
         }
     </style>
-    <ons-page>
-        <div class="page-header text-center">
-            <h1>スッキリSuica</h1>
-            <p>～残高0の幸せ～</p>
-        </div>
-        <div class="container">
-            <div class="box">
-                <div class="row">
-                    <!--<div class="col-md-4 col-md-offset-4">-->
-                    <div style="text-align: center; margin: 30px 15px;">
-                        <form id="sukkiri" method="GET" action="/results/">
-                            <div class="form-inline" style="padding-bottom:30px">
-                                <!--<label for="value">スッキリさせる金額</label>-->
-                                <!-- <input type="text" class="form-control" id="value" placeholder=""> -->
-                                <ons-input id="value" type="number" placeholder="" modifier="underbar" float="float"></ons-input>
-                                <label>円を</label>
-                            </div>
-                            <!--<button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>-->
-                            <ons-button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>
-                        </form>
-                    </div>
-                </div>
 
+    <template id="template.html">
+        <ons-page>
+            <div class="left">
+                <ons-toolbar-button onclick="fn.open()">
+                    <ons-icon icon="md-menu" size="2x"></ons-icon>
+                </ons-toolbar-button>
             </div>
-        </div>
-    </ons-page>
+            <div class="page-header text-center">
+                <h1>スッキリSuica</h1>
+                <p>～残高0の幸せ～</p>
+            </div>
+
+            <br>
+            <div style="text-align: center; margin-top: 30px;">
+                <form method="GET" action="/results/">
+                    <div class="form-inline" style="padding-bottom:30px">
+                        <ons-input id="value" type="number" placeholder="" modifier="underbar" float="float"></ons-input>
+                        <label>円を</label>
+                    </div>
+                    <ons-button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>
+                </form>
+            </div>
+        </ons-page>
+    </template>
 {% endblock %}
 
 {#共通フッタとして追記したい情報を記載します。#}
