--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -10,19 +10,29 @@
 {#ここから表示したい情報を記載します。#}
 {% block page_content %}
     <style>
+    @import url('https://fonts.googleapis.com/css?family=Bitter:700');
         .page__background {
             background-image: url("https://www.pakutaso.com/shared/img/thumb/PAK83_500encointachi20140305_TP_V4.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
             padding: 0;
-            opacity: 0.6;
+            opacity: 0.8;
+        }
+        h1{
+            font-size: 150%;
+            color:black;
+        }
+        p{
+            color:black;
         }
     </style>
     <ons-page>
-        <div class="page-header text-center">
-            <h1>スッキリSuica</h1>
-            <p>～残高0の幸せ～</p>
+        <!--<div class="page-header text-center">-->
+        <div class="text-center">
+            <h1 style="font-family: 'Bitter', serif;font-size: xx-large;">Sukkiri Suica.</h1>
+            <p>ICカードや小銭を0に出来る！</p>
+            <p>新感覚組み合わせ検索アプリ</p>
         </div>
         <div class="container">
             <div class="box">
@@ -33,8 +43,8 @@
                             <div class="form-inline" style="padding-bottom:30px">
                                 <!--<label for="value">スッキリさせる金額</label>-->
                                 <!-- <input type="text" class="form-control" id="value" placeholder=""> -->
-                                <ons-input id="value" type="number" placeholder="" modifier="underbar" float="float"></ons-input>
-                                <label>円を</label>
+                                <ons-input id="value" type="number" placeholder="" modifier="underbar" float="float" style="background-color:white;opacity:0.5;border-radius:100px;padding-left:20px;"></ons-input>
+                                <label style="font-size: x-large;float:right;">円を</label>
                             </div>
                             <!--<button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>-->
                             <ons-button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>
