--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -251,9 +251,9 @@ var hideDialog = function(id) {
         {#合計金額表示#}
         <ons-list-item>
           <div class="left">
-            <span class="list-item__title"><font size="6">合計金額</font></span>
+            <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
           </div>
-          <div class="center">
+          <div class="right">
             <span class="list-item__subtitle"><font size="6">1000</font></span>
           </div>
         </ons-list-item>
@@ -471,9 +471,9 @@ var hideDialog = function(id) {
       {#合計金額表示#}
       <ons-list-item>
         <div class="left">
-          <span class="list-item__title"><font size="6">合計金額</font></span>
+          <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
         </div>
-        <div class="center">
+        <div class="right">
           <span class="list-item__subtitle"><font size="6">1000</font></span>
         </div>
       </ons-list-item>
@@ -690,9 +690,9 @@ var hideDialog = function(id) {
       {#合計金額表示#}
       <ons-list-item>
         <div class="left">
-          <span class="list-item__title"><font size="6">合計金額</font></span>
+          <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
         </div>
-        <div class="center">
+        <div class="right">
           <span class="list-item__subtitle"><font size="6">1000</font></span>
         </div>
       </ons-list-item>
