検索バーの微調整

--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -25,6 +25,7 @@
         }
         p{
             color:black;
+            letter-spacing:2px
         }
     </style>
     <ons-page>
@@ -32,7 +33,7 @@
         <div class="text-center">
             <h1 style="font-family: 'Bitter', serif;font-size: xx-large;">Sukkiri Suica.</h1>
             <p>ICカードや小銭を0に出来る！</p>
-            <p>新感覚組み合わせ検索アプリ</p>
+            <p>新感覚組み合わせ検索アプリ！</p>
         </div>
         <div class="container">
             <div class="box">
@@ -43,8 +44,8 @@
                             <div class="form-inline" style="padding-bottom:30px">
                                 <!--<label for="value">スッキリさせる金額</label>-->
                                 <!-- <input type="text" class="form-control" id="value" placeholder=""> -->
-                                <ons-input id="value" type="number" placeholder="" modifier="underbar" float="float" style="background-color:white;opacity:0.5;border-radius:100px;padding-left:20px;"></ons-input>
-                                <label style="font-size: x-large;float:right;">円を</label>
+                                <ons-input id="value" type="number" placeholder="" modifier="underbar" float="float" style="background-color:white;opacity:0.5;border-radius:100px;padding-left:20px;vertical-align:middle;"></ons-input>
+                                <label style="vertical-align:middle">円を</label>
                             </div>
                             <!--<button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>-->
                             <ons-button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>
