商品リスト　７時！

--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -64,7 +64,7 @@ var hideDialog = function(id) {
       {#他の商品ボタン#}
       <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
       <template id="dialog.html">
-        <ons-dialog id="my-dialog">
+        <ons-dialog cancelable id="my-dialog">
           <div style="text-align: center; padding: 10px;">
             <p>
 
@@ -130,7 +130,7 @@ var hideDialog = function(id) {
           {#他の商品ボタン#}
           <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
           <template id="dialog.html">
-            <ons-dialog id="my-dialog">
+            <ons-dialog cancelable id="my-dialog">
               <div style="text-align: center; padding: 10px;">
                 <p>
 
@@ -196,7 +196,7 @@ var hideDialog = function(id) {
           {#他の商品ボタン#}
           <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
           <template id="dialog.html">
-            <ons-dialog id="my-dialog">
+            <ons-dialog cancelable id="my-dialog">
               <div style="text-align: center; padding: 10px;">
                 <p>
 
@@ -284,7 +284,7 @@ var hideDialog = function(id) {
     {#他の商品ボタン#}
     <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
     <template id="dialog.html">
-      <ons-dialog id="my-dialog">
+      <ons-dialog cancelable id="my-dialog">
         <div style="text-align: center; padding: 10px;">
           <p>
 
@@ -350,7 +350,7 @@ var hideDialog = function(id) {
         {#他の商品ボタン#}
         <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
         <template id="dialog.html">
-          <ons-dialog id="my-dialog">
+          <ons-dialog cancelable id="my-dialog">
             <div style="text-align: center; padding: 10px;">
               <p>
 
@@ -416,7 +416,7 @@ var hideDialog = function(id) {
         {#他の商品ボタン#}
         <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
         <template id="dialog.html">
-          <ons-dialog id="my-dialog">
+          <ons-dialog cancelable id="my-dialog">
             <div style="text-align: center; padding: 10px;">
               <p>
 
@@ -503,7 +503,7 @@ var hideDialog = function(id) {
     {#他の商品ボタン#}
     <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
     <template id="dialog.html">
-      <ons-dialog id="my-dialog">
+      <ons-dialog cancelable id="my-dialog">
         <div style="text-align: center; padding: 10px;">
           <p>
 
@@ -569,7 +569,7 @@ var hideDialog = function(id) {
         {#他の商品ボタン#}
         <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
         <template id="dialog.html">
-          <ons-dialog id="my-dialog">
+          <ons-dialog cancelable id="my-dialog">
             <div style="text-align: center; padding: 10px;">
               <p>
 
@@ -635,7 +635,7 @@ var hideDialog = function(id) {
         {#他の商品ボタン#}
         <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
         <template id="dialog.html">
-          <ons-dialog id="my-dialog">
+          <ons-dialog cancelable id="my-dialog">
             <div style="text-align: center; padding: 10px;">
               <p>
 
