feat:メニューできた。

--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -12,6 +12,7 @@
 {% block page_content %}
 
 <ons-page>
+  {% include 'menu/menu.twig' %}
   <ons-tabbar swipeable position="top">
     <ons-tab page="tab1.html" label="リスト１" active>
     </ons-tab>
