--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -29,6 +29,8 @@
     </style>
     <ons-page>
         <!--<div class="page-header text-center">-->
+        {% include 'menu/menu.twig' %}
+        
         <div class="text-center">
             <h1 style="font-family: 'Bitter', serif;font-size: xx-large;">Sukkiri Suica.</h1>
             <p>ICカードや小銭を0に出来る！</p>
