sukkiri button tag

--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -46,11 +46,11 @@
                             <div class="form-inline" style="padding-bottom:30px">
                                 <!--<label for="value">スッキリさせる金額</label>-->
                                 <!-- <input type="text" class="form-control" id="value" placeholder=""> -->
-                                <ons-input id="value" type="number" placeholder="" modifier="underbar" float="float" style="background-color:white;opacity:0.5;border-radius:100px;padding-left:20px;vertical-align:middle;"></ons-input>
+                                <ons-input id="value" name="zangaku" type="number" placeholder="" modifier="underbar" float="float" style="background-color:white;opacity:0.5;border-radius:100px;padding-left:20px;vertical-align:middle;"></ons-input>
                                 <label style="vertical-align:middle">円を</label>
                             </div>
                             <!--<button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>-->
-                            <ons-button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>
+                            <button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>>
                         </form>
                     </div>
                 </div>
@@ -58,6 +58,3 @@
 		</div>
 	</ons-page>
 {% endblock %}
-
-{#共通フッタとして追記したい情報を記載します。#}
-{% block footer_scripts_add %}{% endblock %}
