syntax fix and in-tax price

--- a/app/View/menu/menu.twig
+++ b/app/View/menu/menu.twig
@@ -1,7 +1,7 @@
 <ons-toolbar>
-    <div class="left">
-        <ons-toolbar-button><a href="/"><ons-icon icon="fa-home"> TOP</ons-icon></a></ons-toolbar-button>
-        <ons-toolbar-button><a href=""><ons-icon icon="fa-sign-in"> ログイン</ons-icon></a></ons-toolbar-button>
-        <ons-toolbar-button><a href=""><ons-icon icon="fa-user-plus"> 新規登録</ons-icon></a></ons-toolbar-button>
-    </div>
+	<div class="left">
+		<ons-toolbar-button><a href="/"><ons-icon icon="fa-home"> TOP</ons-icon></a></ons-toolbar-button>
+		{# <ons-toolbar-button><a href=""><ons-icon icon="fa-sign-in"> ログイン</ons-icon></a></ons-toolbar-button> #}
+		{# <ons-toolbar-button><a href=""><ons-icon icon="fa-user-plus"> 新規登録</ons-icon></a></ons-toolbar-button> #}
+	</div>
 </ons-toolbar>
