--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -109,7 +109,7 @@ var hideDialog = function(id) {
           <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
         </div>
         <div class="center">
-          <span class="list-item__subtitle"><font size="6">{{total}}円</font></span>
+          <span class="list-item__subtitle"><font size="6">{{total}}円(税込)</font></span>
         </div>
       </ons-list-item>
 
