--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -60,8 +60,6 @@ var hideDialog = function(id) {
               <br><br>
               <span class="list-item__subtitle"><font size="5">{{ val.price }}円</font></span>
             </p>
-            {# </ons-list-item> #}
-            {# <br><br> #}
 
             {#他の商品ボタン#}
             <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
@@ -111,7 +109,6 @@ var hideDialog = function(id) {
           <span class="list-item__subtitle"><font size="6">{{total.0}}</font></span>
         </div>
       </ons-list-item>
-
     </ons-card>
   </ons-page>
 </template>
@@ -119,80 +116,59 @@ var hideDialog = function(id) {
 {#リスト２#}
 <template id="tab2.html">
   <ons-page id="Tab2">
+    <ons-card>
+    {#リスト２－１#}
+    {% if res.1 %}
+      {% for val in res.1 %}
+        <ons-list-item>
+          <div class="left">
+            <img src="{{ val.img }}" alt="Onsen UI" style="width: 80%">
+          </div>
+          <div class="center">
+            <p style="text-align: left">
+              <span class="list-item__title"><font size="5">{{ val.product_name }}</font></span>
+              <br><br>
+              <span class="list-item__subtitle"><font size="5">{{ val.price }}円</font></span>
+            </p>
 
-  <ons-card>
+            {#他の商品ボタン#}
+            <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
+            <template id="dialog.html">
+              <ons-dialog cancelable id="my-dialog">
+                <div style="text-align: center; padding: 10px;">
+                  <p>
+                    <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 40%">
+                    <span class="list-item__title"><font size="3">かっぱえびせん</font></span>
+                    <span class="list-item__subtitle"><font size="3">180</font></span>
+                    <section style="padding: 6px">
+                      <ons-button modifier="large">変更する</ons-button>
+                    </section>
+                    <br><br>
+                  </p>
+                  <p>
+                    <ons-button onclick="hideDialog('my-dialog')">閉じる</ons-button>
+                  </p>
+                </div>
+              </ons-dialog>
+            </template>
+          </div>
+        </ons-list-item>
+      {% endfor %}
 
-  {#リスト２－１#}
-  {% if res.1 %}
-    {% for val in res.1 %}
+      {#合計金額表示#}
       <ons-list-item>
         <div class="left">
-          <img src="{{ val.img }}" alt="Onsen UI" style="width: 80%">
+          <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
         </div>
-        <p class="center">
-          <span class="list-item__title"><font size="5">{{ val.product_name }}</font></span>
-          <br>
-          <span class="list-item__subtitle"><font size="5">{{ val.price }}</font></span>
-        </p>
+        <div class="center">
+          <span class="list-item__subtitle"><font size="6">{{total.1}}</font></span>
+        </div>
       </ons-list-item>
-      {# <br><br> #}
-      {#他の商品ボタン#}
-      <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
-      <template id="dialog.html">
-        <ons-dialog cancelable id="my-dialog">
-          <div style="text-align: center; padding: 10px;">
-            <p>
-              <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 40%">
-              <span class="list-item__title"><font size="3">かっぱえびせん</font></span>
-              <span class="list-item__subtitle"><font size="3">180</font></span>
-              <section style="padding: 6px">
-                <ons-button modifier="large">変更する</ons-button>
-              </section>
-              <br><br>
 
-              <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 40%">
-              <font size="3">かっぱえびせん</font>
-              <font size="3">180</font>
-              <section style="padding: 6px">
-                <ons-button modifier="large">変更する</ons-button>
-              </section>
-              <br><br>
-
-              <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 40%">
-              <span class="list-item__title"><font size="3">かっぱえびせん</font></span>
-              <span class="list-item__subtitle"><font size="3">180</font></span>
-              <section style="padding: 6px">
-                <ons-button modifier="large">変更する</ons-button>
-              </section>
-              <br><br>
-            </p>
-            <p>
-              <ons-button onclick="hideDialog('my-dialog')">閉じる</ons-button>
-            </p>
-          </div>
-        </ons-dialog>
-      </template>
-    {% endfor %}
-
-    {#合計金額表示#}
-    <ons-list-item>
-      <div class="left">
-        <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
-      </div>
-      <div class="center">
-        <span class="list-item__subtitle"><font size="6">{{total.1}}</font></span>
-      </div>
-    </ons-list-item>
-
-
-  {% else %}
-      <p>ほかの候補はありません</p>
-  {% endif %}
-
-
-
- </ons-card>
-
+    {% else %}
+      <p><font size="3">ほかの候補はありません</font></p>
+    {% endif %}
+    </ons-card>
   </ons-page>
 </template>
 
@@ -200,76 +176,58 @@ var hideDialog = function(id) {
 <template id="tab3.html">
   <ons-page id="Tab3">
   <ons-card>
+    {#リスト２－１#}
+    {% if res.2 %}
+      {% for val in res.2 %}
+        <ons-list-item>
+          <div class="left">
+            <img src="{{ val.img }}" alt="Onsen UI" style="width: 80%">
+          </div>
+          <div class="center">
+            <p style="text-align: left">
+              <span class="list-item__title"><font size="5">{{ val.product_name }}</font></span>
+              <br><br>
+              <span class="list-item__subtitle"><font size="5">{{ val.price }}円</font></span>
+            </p>
 
-  {#リスト３－１#}
-  {% if res.2 %}
-    {% for val in res.2 %}
+            {#他の商品ボタン#}
+            <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
+            <template id="dialog.html">
+              <ons-dialog cancelable id="my-dialog">
+                <div style="text-align: center; padding: 10px;">
+                  <p>
+                    <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 40%">
+                    <span class="list-item__title"><font size="3">かっぱえびせん</font></span>
+                    <span class="list-item__subtitle"><font size="3">180</font></span>
+                    <section style="padding: 6px">
+                      <ons-button modifier="large">変更する</ons-button>
+                    </section>
+                    <br><br>
+                  </p>
+                  <p>
+                    <ons-button onclick="hideDialog('my-dialog')">閉じる</ons-button>
+                  </p>
+                </div>
+              </ons-dialog>
+            </template>
+          </div>
+        </ons-list-item>
+      {% endfor %}
+
+      {#合計金額表示#}
       <ons-list-item>
         <div class="left">
-          <img src="{{ val.img }}" alt="Onsen UI" style="width: 80%">
+          <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
         </div>
-        <p class="center">
-          <span class="list-item__title"><font size="5">{{ val.product_name }}</font></span>
-          <br>
-          <span class="list-item__subtitle"><font size="5">{{ val.price }}</font></span>
-        </p>
+        <div class="center">
+          <span class="list-item__subtitle"><font size="6">{{total.1}}</font></span>
+        </div>
       </ons-list-item>
-      {# <br><br> #}
-      {#他の商品ボタン#}
-      <ons-button onclick="showTemplateDialog()">他の商品</ons-button>
-      <template id="dialog.html">
-        <ons-dialog cancelable id="my-dialog">
-          <div style="text-align: center; padding: 10px;">
-            <p>
-              <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 40%">
-              <span class="list-item__title"><font size="3">かっぱえびせん</font></span>
-              <span class="list-item__subtitle"><font size="3">180</font></span>
-              <section style="padding: 6px">
-                <ons-button modifier="large">変更する</ons-button>
-              </section>
-              <br><br>
 
-              <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 40%">
-              <font size="3">かっぱえびせん</font>
-              <font size="3">180</font>
-              <section style="padding: 6px">
-                <ons-button modifier="large">変更する</ons-button>
-              </section>
-              <br><br>
-
-              <img src="https://monaca.io/img/logos/download_image_onsenui_01.png" alt="Onsen UI" style="width: 40%">
-              <span class="list-item__title"><font size="3">かっぱえびせん</font></span>
-              <span class="list-item__subtitle"><font size="3">180</font></span>
-              <section style="padding: 6px">
-                <ons-button modifier="large">変更する</ons-button>
-              </section>
-              <br><br>
-            </p>
-            <p>
-              <ons-button onclick="hideDialog('my-dialog')">閉じる</ons-button>
-            </p>
-          </div>
-        </ons-dialog>
-      </template>
-    {% endfor %}
-
-    {#合計金額表示#}
-    <ons-list-item>
-      <div class="left">
-        <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
-      </div>
-      <div class="center">
-        <span class="list-item__subtitle"><font size="6">{{total.2}}</font></span>
-      </div>
-    </ons-list-item>
-
-
-  {% else %}
-      <p>ほかの候補はありません</p>
-  {% endif %}
-
-   </ons-card>
-
+    {% else %}
+      <p><font size="3">ほかの候補はありません</font></p>
+    {% endif %}
+    </ons-card>
   </ons-page>
 </template>
 
